--- a/.github/workflows/build-rel-lite.yml
+++ b/.github/workflows/build-rel-lite.yml
@@ -2,11 +2,9 @@ name: Build Project (Release, Lite)
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main", "v0.1.0.x-saas", "v0.1.1.x-saas", "v0.1.2.x-saas" ]
   pull_request:
-    branches:
-      - main
+    branches: [ "main", "v0.1.0.x-saas", "v0.1.1.x-saas", "v0.1.2.x-saas" ]
     
 jobs:
   build:
