--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -2,9 +2,9 @@ name: Build Project (Docker)
 
 on:
   push:
-    branches: [ "main", "v0.1.0.x-saas", "v0.1.1.x-saas", "v0.1.2.x-saas" ]
+    branches: [ "main", "v0.1.0.x-saas", "v0.1.1.x-saas", "v0.1.2.x-saas", "v0.1.3.x-saas" ]
   pull_request:
-    branches: [ "main", "v0.1.0.x-saas", "v0.1.1.x-saas", "v0.1.2.x-saas" ]
+    branches: [ "main", "v0.1.0.x-saas", "v0.1.1.x-saas", "v0.1.2.x-saas", "v0.1.3.x-saas" ]
     
 jobs:
   build:
@@ -14,13 +14,23 @@ jobs:
     - uses: actions/checkout@v4
       with:
         ref: ${{ github.ref }}
+    - name: Prepare Docker (auth)
+      uses: docker/login-action@master
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@master
+    - name: Extract metadata (tags, labels) for Docker
+      id: meta
+      uses: docker/metadata-action@master
+      with:
+        images: eofla/nitrocid
     - name: Build Docker image
-      id: push
       uses: docker/build-push-action@master
       with:
-        context: .
-        file: ./Dockerfile
         push: false
+        provenance: mode=max
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         
